--- a/index.html
+++ b/index.html
@@ -8,7 +8,5 @@
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1LaMzqXkH_VSROOltt1OulnVXTLbpsfJK">白雪姫</a></td><td>グリムヴィルヘルム・カール</td><td>ずんだもん-ノーマル</td><td>83.2 MiB</td><td>0:30:17</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1aMEidpXt7Yof1v9ofxZKz3aSPFbkA8RB">お金とピストル</a></td><td>香倶土三鳥</td><td>ずんだもん-ノーマル</td><td>3.43 MiB</td><td>0:01:14</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1Y36vHr5OYdUQGHkmQJPTPvPAcIP5kjwN">黒衣聖母</a></td><td>芥川竜之介</td><td>四国めたん-ツンツン</td><td>773.63 KiB</td><td>0:00:16</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1CDN6vR6KB6R2p78cpE7y0MRJ1HcNunAx">羅生門</a></td><td>芥川竜之介</td><td>ずんだもん-ノーマル</td><td>27.1 MiB</td><td>0:09:51</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1TsgrWIxPnBi7ku7yWYp6W2Jtkm5jYcSu">三国志</a></td><td>吉川英治</td><td>ずんだもん-ノーマル</td><td>614.0 B</td><td>0:00:00</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1cV2ehcqTL10llW1gyI9V2mQUhkwfMPuD">羅生門</a></td><td>芥川竜之介</td><td>ずんだもん-ノーマル</td><td>2.23 KiB</td><td>0:00:00</td></tr>
+<tr><td><a href="https://drive.google.com/uc?export=download&id=1_rRUXKTaPtdmtSOJgA_M2S4oqGg76Qn6">『吾輩は猫である』上篇自序</a></td><td>夏目漱石</td><td>ずんだもん-ノーマル</td><td>6.48 MiB</td><td>0:02:21</td></tr>
 </table></body></html>
