Update html add content

--- a/index.html
+++ b/index.html
@@ -24,4 +24,5 @@
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1ZfLp8q7okaEFxH8N6HH-_6YNrnJ44Bxd">桜の樹の下には</a></td><td>梶井基次郎</td><td>ずんだもん-ノーマル</td><td>14.32 MiB</td><td>0:05:12</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1MDaLSicysTKcQ35UTlSSVyS7OW5CDPsp">蜘蛛の糸</a></td><td>芥川竜之介</td><td>ずんだもん-ノーマル</td><td>23.76 MiB</td><td>0:08:39</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1rzi-bf9-ySnb10_yAvHn9IOFgbE-XS1t">猫の広告文</a></td><td>夏目漱石</td><td>ずんだもん-ノーマル</td><td>1.5 MiB</td><td>0:00:32</td></tr>
+<tr><td><a href="https://drive.google.com/uc?export=download&id=1fmIaOSGH-VXFF8Qok2KJea2cV6NSB7Op">指</a></td><td>江戸川乱歩</td><td>ずんだもん-ノーマル</td><td>10.59 MiB</td><td>0:03:51</td></tr>
 </table></body></html>
